[gd_scene load_steps=5 format=2]

[ext_resource path="res://block_stacking_game/block.tscn" type="PackedScene" id=1]
[ext_resource path="res://block_stacking_game/front_panel.png" type="Texture" id=2]
[ext_resource path="res://block_stacking_game/lcd_panel.png" type="Texture" id=3]
[ext_resource path="res://block_stacking_game/main.gd" type="Script" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="LcdPanel" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -51, 0 )

[node name="Cursor" type="Node2D" parent="."]
position = Vector2( -27, 153 )
__meta__ = {
"_edit_group_": true
}

[node name="Block" parent="Cursor" instance=ExtResource( 1 )]
position = Vector2( 3, -1 )
offset = Vector2( -3, 1 )

[node name="Block2" parent="Cursor" instance=ExtResource( 1 )]
position = Vector2( 11, -1 )
offset = Vector2( -3, 1 )

[node name="Block3" parent="Cursor" instance=ExtResource( 1 )]
position = Vector2( 19, -1 )
offset = Vector2( -3, 1 )

[node name="Blocks" type="Node2D" parent="."]

[node name="Block" parent="Blocks" instance=ExtResource( 1 )]

[node name="FrontPanel" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -51, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 96 )
current = true
zoom = Vector2( 0.32, 0.32 )

[node name="Bottom" type="Position2D" parent="."]
position = Vector2( -27, 153 )

[node name="CursorTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="PlaceTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="CursorTimer" to="." method="_on_CursorTimer_timeout"]
[connection signal="timeout" from="PlaceTimer" to="." method="_on_PlaceTimer_timeout"]
